# emlyn-ipython-notebooks

./: README.md
Analysing the ECG/data/: emlyn_ECG_sitting_2017.04.21_11.48.30.hdf5  emlyn_ECG_standing_2017.04.21_11.49.50.hdf5  emlyn_ECG_valsalva_2017.04.21_11.51.13.hdf5
Matlab to Python/: emlyn_matlab-to-python.ipynb
Matlab to Python/data/: CNAP_filtered.mat
Practicalities of analysing biosignals/.ipynb_checkpoints/: Practicalities of analysing biosignals-checkpoint.ipynb
Practicalities of analysing biosignals/data/: ecg.h5  ecg_101.txt
analysing_ecg/: requirements.txt
analysing_ecg/data/: emlyn_ECG_exercise_2017.04.21_11.53.10.hdf5
matlab_to_python/data/: CNAP_filtered.tab
practicalities_analysing_biosignals/: Practicalities of analysing biosignals.slides.html  custom.css  ecg.h5  notes.txt  practicalities_analysing_biosignals.ipynb  stratch.py
practicalities_analysing_biosignals/data/: ecg_101-tab.txt
protein_folding_drug_discovery/: protein_folding_drug_discovery.ipynb  pyproject.toml  viewer.py
protein_folding_drug_discovery/files/: 5f8u.cif  all_ligands_bound.pse  noradrenaline.mol  propranolol.mol  propranolol.sdf  simvastatin.mol
